<resources>
    <string name="app_name">SmartParking</string>

    <string name="welcome_text">Hola bienvenido a inteligent parking</string>
    <string name="continue_next">Ver espacios</string>
    <string name="continue_administrator">Registrarse o hacer login</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="action_favorite">Log out</string>
    <string name="title_delay">Cajones retrasados</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="label_id">Id</string>
    <string name="label_time">Tiempo</string>
    <string name="empty_state_hours">Por ahora todo esta bien, no hay carros estancados</string>
    <string name="server_url">https://parking-area-santy-ruler.c9users.io:8081/</string>
    <string name="graph_by_day">http://sparkingsystem.info/api/</string>
    <string name="socket_url">https://parking-area-santy-ruler.c9users.io:8082</string>

    <string name="confirmation">Se te informara si tu automovil sale de su espacio, por favor no cierres el app</string>
    <string name="local_service_started">started</string>
    <string name="local_service_stopped">stopped</string>
    <string name="local_service_label">service_example</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_username">Nombre</string>
    <string name="hint_email">Correo Electronico</string>
</resources>
