<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.macbook.smartparking.HomeScreenAdministrator">


    <RelativeLayout
        android:visibility="gone"
        android:id="@+id/progresView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="4dp"
        android:background="@color/secondary_text">
        <ProgressBar
            android:layout_centerInParent="true"
            android:layout_width="100dp"
            android:layout_height="100dp"
            />
    </RelativeLayout>

    <TextView
        android:visibility="gone"
        android:id="@+id/titleAdministrator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_delay"
        style="@style/title_administrator"/>

    <LinearLayout
        android:id="@+id/emptyState"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <ImageView
            android:tint="@color/primary"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:src="@drawable/checked"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            style="@style/empty_state"
            android:text="@string/empty_state_hours"/>
    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/titleAdministrator"
        android:elevation="4dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:background="@color/secondary_color">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/label_id"
                style="@style/text_header_list_delay"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:text="@string/label_time"
                style="@style/text_header_list_delay"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/graphButton"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="bottom|right"
        android:layout_margin="16dp"
        android:src="@drawable/ic_assessment_white_24dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        app:layout_anchorGravity="bottom|right|end" />


</RelativeLayout>
